@@ -1,3 +1,7 @@
+2010-07-22
+
+	* src/addressbook.c: implemeted drag and drop of addresses.
+
 2010-07-21
 
 	* src/prefs_template.c: notify on OK button press if not saved.
